refactor: implement user service exceptions for handling user-related errors